@@ -364,7 +364,7 @@ Visual C++ target, and for additional help on changes for Windows32.
 If you have any problems with the DOS or OS/2 versions of Gawk, 
 please send bug reports (along with the version and compiler used) to 
 
-   Scott Deifik, scottd@amgen.com (DOS versions)
+   Scott Deifik, scottd.mail@sbcglobal.net (DOS versions)
 or
    gawk-maintainer@unixos2.org (OS/2 version)
    Darrel Hankerson, hankedr@mail.auburn.edu
