@@ -446,13 +446,13 @@
 #define PACKAGE_NAME "GNU Awk"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "GNU Awk 3.1.4c"
+#define PACKAGE_STRING "GNU Awk 3.1.6"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "gawk"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "3.1.4c"
+#define PACKAGE_VERSION "3.1.6"
 
 /* Define to 1 if *printf supports %F format */
 #undef PRINTF_HAS_F_FORMAT
@@ -506,7 +506,7 @@
 #define USE_INCLUDED_STRFTIME 1
 
 /* Version number of package */
-#define VERSION "3.1.4"
+#define VERSION "3.1.6"
 
 /* Define to 1 if on AIX 3.
    System headers sometimes define this.
