@@ -1,3 +1,15 @@
+Wed Jul 27 21:31:14 2005        Pat Rankin      <rankin@pactechdata.com>
+
+	* vmstest.com: Format test group feedback differently (append "...")
+	  to distinguish it from individual test feedback.
+	(manyfiles): Determine the number of files to use dynamically
+	  instead of using hardcoded 300 in case user's open file quota
+	  is generous enough to support more than that.
+	(longsub): Add error trap so that failure when gawk is built with
+	  VAXCRTL doesn't cause testing to terminate.
+	(vms_io1): Invoke with normal Unix-style command line syntax.
+	(vms_cmd): New test; split off DCL-style command line from vms_io1.
+
 Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Release 3.1.5: Release tar file made.
